<resources>
    <string name="app_name">OlaMundo</string>
    <string name="ol_senai">Olá Mundo!!</string>
    <string name="ol_nome">Nome</string>
    <string name="ol_email">E-mail</string>
    <string name="ol_endereco">Endereço</string>
    <string name="ol_telefone">Telefone</string>
    <string name="bt_salvar">Salvar</string>
    <string name="ol_codigo">Código</string>
    <string name="ol_nomeProduto">Nome Produto</string>
    <string name="ol_tipoProd">Tipo Produto</string>
    <string name="ol_preco">Preço</string>
    <string name="ol_okProd">OK</string>
    <string name="tit_cadastro">Cadastro</string>
    <string name="tit_media">Calculo Media</string>
</resources>
